<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".LoginRegisterActivity">

    <include
        layout="@layout/layout_toolbar_center_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/et_login_itsc"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_login_ITSC"
            android:includeFontPadding="true"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:layout_below="@+id/tv_login_logo"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tv_login_warning_itsc"
            android:inputType="textNoSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="invalid ITSC account."
            android:textSize="12sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_marginTop="-7dp"
            android:layout_below="@+id/et_login_itsc" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_login_itsc"
            android:layout_marginTop="10dp"
            android:hint="@string/et_hint_login_password"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login_warning_password"
            android:inputType="textNoSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="invalid password."
            android:textSize="12sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_marginTop="-7dp"
            android:layout_below="@+id/et_login_password"
            android:background="@null" />

        <TextView
            android:id="@+id/tv_login_forgot_password"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/et_login_password"
            android:layout_below="@+id/et_login_password"
            android:text="@string/tv_text_login_forgot_password"
            android:textSize="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_below="@+id/tv_login_forgot_password"
            android:text="@string/btn_text_login_login"
            android:textColor="@color/text_color"
            app:backgroundTint="@color/background_color"
            app:strokeWidth="1dp"
            app:strokeColor="@color/text_color"
            app:cornerRadius="7dp" />

        <TextView
            android:id="@+id/tv_login_warning_login_failure"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="login failure: account does not exist."
            android:textSize="12sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_marginTop="-20dp"
            android:layout_below="@+id/btn_login_login"
            android:layout_centerHorizontal="true" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/btn_text_login_sign_up"
            android:textColor="@color/white"
            app:backgroundTint="#FF767171"
            android:layout_below="@+id/btn_login_login"
            app:cornerRadius="7dp" />

        <TextView
            android:id="@+id/tv_login_continue_as_a_visitor"
            android:inputType="textNoSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:layout_below="@+id/btn_login_sign_up"
            android:text="@string/link_continue_as_a_visitor" />

    </RelativeLayout>

</LinearLayout>

